--- a/style.css
+++ b/style.css
@@ -11,11 +11,29 @@ header{
 	background-position: center;
 }
 
+h1{
+	margin-top: 50px;
+}
+
 ul{
 	float: right;
 	list-style-type: none;
+	margin-top: 25px;
 }
 
 ul li{
 	display: inline-block;
+}
+
+ul li a{
+	text-decoration: none;
+	color: #fff;
+	padding: 5px 20px;
+	border: 1px solid #fff;
+	transition: 0.5s;
+}
+
+ul li a:hover{
+	background-color: #fff;
+	color: #000;
 }
