--- a/style.css
+++ b/style.css
@@ -11,10 +11,6 @@ header{
 	background-position: center;
 }
 
-h1{
-	margin-top: 50px;
-}
-
 ul{
 	float: right;
 	list-style-type: none;
@@ -29,11 +25,35 @@ ul li a{
 	text-decoration: none;
 	color: #fff;
 	padding: 5px 20px;
-	border: 1px solid #fff;
-	transition: 0.5s;
+	border: 1px solid solid transparent;
+	transition: 0.5s ease;
 }
 
 ul li a:hover{
 	background-color: #fff;
 	color: #000;
+}
+
+ul li.active a{
+	background-color: #fff;
+	color: #000;
+}
+
+.logo img{
+	float: left;
+	width: 75px;
+	height: auto;
+	margin-top: 25px;
+}
+
+.main{
+	max-width: 1200px;	
+	margin: auto;
+}
+
+.title{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
 }
