--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: Century Gothic;
 }
 
 header{
-	background-image: url(media/background.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(media/background.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
