--- a/style.css
+++ b/style.css
@@ -4,13 +4,18 @@ padding: 0;
 font-family: Century Gothic;
 }
 
-header{
+header.index{
 	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(media/background.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
 }
-
+header.aboutme{
+	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(aboutme/background.jpg);
+	height: 100vh;
+	background-size: cover;
+	background-position: center;
+}
 ul{
 	float: right;
 	list-style-type: none;
@@ -56,4 +61,20 @@ ul li.active a{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
+}
+
+.about{
+	position: absolute;
+	top: 50%;
+	left: 20%;
+	transform: translate(-15%,-50%);
+	color: white;
+	width: 600px;
+}
+
+.headshot{
+	position: absolute;
+	top: 50%;
+	left: 70%;
+	transform: translate(-25%,-50%);
 }
