--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ ul li.active a{
 }
 
 @media screen and (max-width: 700px){
+	width: 100%;
+	height: 100%;
 	.headshot{
 		position: absolute;
 		top: 15%;
