--- a/style.css
+++ b/style.css
@@ -85,11 +85,15 @@ ul li.active a{
 		position: absolute;
 		top: 30%;
 		left: 50%;
-		max-width: 100%;
+		max-width: 50%;
 		transform: translate(-25%,-50%);
 	}
 	
 	.about{
 		width: auto;
+	}
+	
+	header.aboutme{
+		max-width: auto;
 	}
 }
