--- a/style.css
+++ b/style.css
@@ -85,16 +85,12 @@ ul li.active a{
 		position: absolute;
 		top: 30%;
 		left: 50%;
-		max-width: 50%;
+		max-width: 100%;
+		height: auto;
 		transform: translate(-25%,-50%);
 	}
-	
+
 	.about{
 		width: auto;
-	}
-	
-	header.aboutme{
-		background-size: cover;
-		background-position: center;
 	}
 }
