--- a/style.css
+++ b/style.css
@@ -85,9 +85,9 @@ ul li.active a{
 		position: absolute;
 		top: 30%;
 		left: 50%;
-		max-width: 100%;
+		max-width: 33%;
+		width: 180px;
 		height: auto;
-		transform: translate(-25%,-50%);
 	}
 
 	.about{
