--- a/style.css
+++ b/style.css
@@ -79,7 +79,11 @@ ul li.active a{
 	transform: translate(-25%,-50%);
 }
 
-@media screen and (max-width: 700px){
+@media screen and (min-width: 700px){
+
+	.aboutme{
+		display: flex;
+	}
 
 	.headshot{
 		top: 30%;
