--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ ul li.active a{
 	transform: translate(-25%,-50%);
 }
 
-@media screen and (min-width: 700px){
+@media screen and (max-width: 700px){
 
 	.aboutme{
 		display: flex;
