--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ p {
 
 	.about{
 		width: auto;
-		/*text-align: center;*/
+		text-align: center;
 		margin-top: -10vh;
 	}
 
@@ -144,7 +144,7 @@ p {
 	}
 
 	.headshot img{
-		width:75%;
+		width:100%;
 		height:auto;
 	}
 
