--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ p {
 		justify-content: center;
 		align-items: center;
 		left: 0vw;
+		@media screen and (min-width: 500px) { your code here; try making width 200%}
 	}
 
 	ul {
